--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body {
-    background:  #87CEFA;
+    background-image:
+      url('https://wallpapercave.com/wp/wp2722604.jpg');
  background-size:  auto 100vh; 
     font-family: Arial;
 height: 100vg; 
@@ -37,8 +38,3 @@ a: hover {
 .site-subtitle {
 font-style: italic;
 }
-
-
-
-
-
